src/components/AppContainer.less
@import "../shared";

html {
  background-color: white;
  width: 800px;
  margin: 0 auto;
}

body {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  margin: 0;
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 300;
}

p {
  padding: 0.5em 0;
  margin: 0;
}

.hp-center {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hp-content-paragraph {
  padding: 8px 0;
}

a, a:hover, a:active, a:visited {
  color: @accentColour;
}

.hp-anchor {
  color: @accentColour;

  &:hover {
    text-decoration: underline;
  }
}

.hp-app {
  display: flex;
  flex-direction: column;
  align-items: stretch;

  .hp-app-talks-list {
    padding-top: 1em;
  }
}

